--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_API_URL=http://localhost:1337
+VITE_API_URL=https://industrial-render-api.onrender.com
 VITE_GMAPS_KEY=AIzaSyCLphl6liTn2Ko_XeZeegHUQzrMSdavkjM
